Updated README and default values